build_cc fix (#168)

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,3 +39,5 @@ jobs:
       run: cargo test --all --features debug
     - name: Run tests check
       run: cargo test --all --features check
+    - name: Run tests build_cc
+      run: cargo test --all --features "build_cc usecxx17"
