Use CMake module CheckIncludeFilesCXX
as C language isn't enabled by default everywhere

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 
 include(CheckCXXCompilerFlag)
 include(CheckCXXSourceCompiles)
-include(CheckIncludeFile)
+include(CheckIncludeFileCXX)
 include(CMakeDependentOption)
 
 option(SNMALLOC_HEADER_ONLY_LIBRARY "Use snmalloc has a header-only library" OFF)
@@ -112,7 +112,7 @@ int main() {
 # but some might provide the necessary flags via linux/random.h
 # the __has_include macro isn't working properly on all platforms for that header
 # this is why we check its existence here
-CHECK_INCLUDE_FILE(linux/random.h SNMALLOC_HAS_LINUX_RANDOM_H)
+CHECK_INCLUDE_FILE_CXX(linux/random.h SNMALLOC_HAS_LINUX_RANDOM_H)
 
 # Provide as function so other projects can reuse
 # FIXME: This modifies some variables that may or may not be the ones that
