Morello CI to run as a non-root user
For reasons unrelated to snmalloc, it's become more convenient to engage
in a little white lie, as it were, that the CI jobs are not `root` on
the worker nodes.  So I'm testing changes on the cluster orchestration
goo to run the github runner as a non-root user.  However, much as with
GitHub's own runners, the runner user is in the `wheel`, and `root` will
have no password, so we can still `su` up to `root` when needed.

Of course, when we are already root, we can `su` to anyone we like,
including `root`, so these changes are compatible with both the old and
new world order and have been tested with both.

--- a/.github/workflows/morello.yml
+++ b/.github/workflows/morello.yml
@@ -38,8 +38,8 @@ jobs:
         include:
           - os: "morello"
             caps: Hybrid
-            dependencies: |
-              pkg64 install -y llvm-localbase cmake ninja
+            dependencies: >-
+              llvm-localbase cmake ninja
             cmake-flags: >
               -DCMAKE_CXX_COMPILER=/usr/local64/bin/clang++
               -DCMAKE_C_COMPILER=/usr/local64/bin/clang
@@ -47,8 +47,8 @@ jobs:
               -DCMAKE_C_FLAGS='-march=morello -Xclang -morello-vararg=new'
           - os: "morello"
             caps: Purecap
-            dependencies: |
-              pkg64 install -y llvm-localbase cmake ninja
+            dependencies: >-
+              llvm-localbase cmake ninja
             cmake-flags: >
               -DCMAKE_CXX_COMPILER=/usr/local64/bin/clang++
               -DCMAKE_C_COMPILER=/usr/local64/bin/clang
@@ -72,7 +72,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install build dependencies
-      run: ${{ matrix.dependencies }}
+      run: |
+        su -l root -c "pkg64 install -y ${{ matrix.dependencies }}"
     - name: Log environment details
       run: |
         uname -a
